--- a/Spring/NoticiaC/src/main/resources/templates/noticia_form.html
+++ b/Spring/NoticiaC/src/main/resources/templates/noticia_form.html
@@ -5,24 +5,15 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaft.or/extras/spring-security">
-    <head>
-        <title>Cargar nueva noticia!</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/x-icon" th:href="@{/imagenes/logo.ico}">
-        <link rel="stylesheet" th:href="@{/css/estilo.css}">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    </head>
+    <head th:replace="/fragment/head :: head"> </head>
     <body>
+        <header th:replace="/fragment/navbar :: header"> </header>
         <div class="card">
             <div class="card-header">
-                <header>
-                    <div class="contenido">
-                        <img src="/imagenes/imagenNoticia.png" class="rounded-circle" id="imagenCabecera" alt="imagen noticia" width="165">
-
-                        <h1>Cargue su noticia aqui </h1>
-                    </div>
-                </header>
+                <div class="contenido">
+                    <img src="/imagenes/imagenNoticia.png" class="rounded-circle" id="imagenCabecera" alt="imagen noticia" width="165">
+                    <h1>Cargue su noticia aqui </h1>
+                </div>
             </div>
             <div class="card-body">
                 <form action="/noticia/registro" method="POST" enctype="multipart/form-data"> 
