--- a/Spring/NoticiaC/src/main/resources/templates/listar.html
+++ b/Spring/NoticiaC/src/main/resources/templates/listar.html
@@ -1,25 +1,19 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaft.or/extras/spring-security">
-    <head>
-        <title>Lista noticias</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link rel="icon" type="image/x-icon" th:href="@{/imagenes/logo.ico}">
-        <link rel="stylesheet" th:href="@{/css/estilo.css}">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    </head>
+    <head th:replace="/fragment/head :: head"> </head>
     <body>
+        <header th:replace="/fragment/navbar :: header"> </header>
         <div class="card" style="width: 18rem;" th:each="noticiaLista : ${noticiaLista}">           
-             <!--     <img th:src="@{/imagen/__${noticiaLista.id}___}" class="card-img-top" alt="archivo" >   -->
-                <h5 class="card-title" th:text="${noticiaLista.titulo}"></h5>
-                <p class="card-text" th:text="${noticiaLista.cuerpo}"></p>
-                <div class="card-body">
-                    <a th:href="@{/noticia/modificar/__${noticiaLista.id}__}" class="card-link">Modificar</a>
-                    <a href="#" class="card-link">Alta</a>
-                    <a href="#" class="card-link">Baja</a>
-                </div>
-            </div> 
-        </div>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    </body>
+            <!--     <img th:src="@{/imagen/__${noticiaLista.id}___}" class="card-img-top" alt="archivo" >   -->
+            <h5 class="card-title" th:text="${noticiaLista.titulo}"></h5>
+            <p class="card-text" th:text="${noticiaLista.cuerpo}"></p>
+            <div class="card-body">
+                <a th:href="@{/noticia/modificar/__${noticiaLista.id}__}" sec:authorize="hasRole('ADMIN')" class="card-link">Modificar</a>
+                <a href="#" sec:authorize="hasRole('ADMIN')"  class="card-link">Alta</a>
+                <a href="#" sec:authorize="hasRole('ADMIN')"  class="card-link">Baja</a>
+            </div>
+        </div> 
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+</body>
 </html>
