--- a/Spring/NoticiaC/src/main/resources/templates/perfilModificar.html
+++ b/Spring/NoticiaC/src/main/resources/templates/perfilModificar.html
@@ -9,42 +9,47 @@
                     <img src="/imagenes/registro.jpg" class="card-img" alt="...">
                 </div>
                 <div class="card" style="width: 48rem;" >           
-                    <form class="formulario" th:action="@{/perfilM/__${usuario.id}__}" method="POST" enctype="multipart/form-data">
-                        <div class="card-body">
-                            <h1 class="card-title">Modificar Perfil</h1>
-                            <br>
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <label for="inputEmail4">Nombre</label>
-                                    <input type="text"  name="nombre" class="form-control" id="inputNombre"  th:value="${nombre}">
+                    <!--<form class="formulario" th:action="@{/perfilM/__${usuario.id}__}" method="POST" enctype="multipart/form-data">-->
+                        <form class="formulario" th:action="@{/perfilM/__${session.usuariosession.id}__}" method="POST" enctype="multipart/form-data">
+
+                            <div class="card-body">
+                                <h1 class="card-title">Modificar Perfil</h1>
+                                <br>
+                                <div class="form-row">
+                                   <!-- <input hidden th:value="${usuario.id}" name="id">-->
+                                   <input hidden th:value="${session.usuariosession.id}" name="id">
+
+                                    <div class="form-group col-md-6">
+                                        <label for="inputEmail4">Nombre</label>
+                                        <input type="text"  name="nombre" class="form-control" id="inputNombre"  th:value="${nombre}">
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="inputEmail4">Email</label>
+                                        <input type="email"  name="email"  class="form-control" id="inputEmail4"  th:value="${email}">
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="inputPassword4">Contraseña</label>
+                                        <input type="password"  name="pass"  class="form-control" id="inputPassword4" th:value="${pass}">
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="inputPassword4">Repetir Contraseña</label>
+                                        <input type="password"  name="pass2"  class="form-control" id="inputRepetirPassword4" th:value="${pass2}">
+                                    </div>
+                                    <div class="mb-3">
+                                        <label for="formFile" class="form-label">Imagen de perfil</label>
+                                        <input class="form-control" name="foto" type="file" id="formFile" th:value="${archivo}">
+                                    </div> 
                                 </div>
-                                <div class="form-group col-md-6">
-                                    <label for="inputEmail4">Email</label>
-                                    <input type="email"  name="email"  class="form-control" id="inputEmail4"  th:text="${usuario.email}" th:value="${email}">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label for="inputPassword4">Contraseña</label>
-                                    <input type="password"  name="pass"  class="form-control" id="inputPassword4" th:value="${pass}">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label for="inputPassword4">Repetir Contraseña</label>
-                                    <input type="password"  name="pass2"  class="form-control" id="inputRepetirPassword4" th:value="${pass2}">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="formFile" class="form-label">Imagen de perfil</label>
-                                    <input class="form-control" name="foto" type="file" id="formFile">
-                                </div> 
                             </div>
-                        </div>
-                        <div th:if="${error != null}" class="alert alert-danger" role="alert">
-                            <p class="MensajeError" th:text="${error}"></p>
-                        </div>
-                        <div th:if="${exito != null}" class="alert alert-success" role="alert">
-                            <p class="MensajeExito" th:text="${exito}"></p>
-                            <!--  <a class="btn" th:href="@{/login}" >Listar noticias</a> -->
-                        </div>
-                        <button type="submit" class="btn btn-secondary btn-lg btn-block" id="botonEnviar">Registrar</button>
-                    </form>
+                            <div th:if="${error != null}" class="alert alert-danger" role="alert">
+                                <p class="MensajeError" th:text="${error}"></p>
+                            </div>
+                            <div th:if="${exito != null}" class="alert alert-success" role="alert">
+                                <p class="MensajeExito" th:text="${exito}"></p>
+                                <!--  <a class="btn" th:href="@{/login}" >Listar noticias</a> -->
+                            </div>
+                            <button type="submit" class="btn btn-secondary btn-lg btn-block" id="botonEnviar">Registrar</button>
+                        </form>
                 </div>
             </div>
         </div>
