--- a/Spring/NoticiaC/src/main/resources/templates/error.html
+++ b/Spring/NoticiaC/src/main/resources/templates/error.html
@@ -13,5 +13,6 @@
                 </div>
             </div>
         </section>
+        <div th:replace = "/fragment/boots :: div"></div>
     </body>
 </html>
