--- a/Spring/NoticiaC/src/main/resources/templates/index.html
+++ b/Spring/NoticiaC/src/main/resources/templates/index.html
@@ -2,7 +2,8 @@
 <html>
     <head th:replace="/fragment/head :: head"> </head>
     <body>
-    <header th:replace="/fragment/navbar :: header"> </header>
+        <header th:replace="/fragment/navbar :: header"> </header>
         <div>TODO write content</div>
+        <div th:replace = "/fragment/boots :: div"></div>
     </body>
 </html>
