--- a/Spring/NoticiaC/src/main/resources/templates/panel.html
+++ b/Spring/NoticiaC/src/main/resources/templates/panel.html
@@ -9,5 +9,6 @@ and open the template in the editor.
     <body>
         <header th:replace="/fragment/navbar :: header"> </header>
         <div>TABLERO ADMIN</div>
+        <div th:replace = "/fragment/boots :: div"></div>
     </body>
 </html>
