--- a/Spring/NoticiaC/src/main/resources/templates/listar.html
+++ b/Spring/NoticiaC/src/main/resources/templates/listar.html
@@ -3,17 +3,29 @@
     <head th:replace="/fragment/head :: head"> </head>
     <body>
         <header th:replace="/fragment/navbar :: header"> </header>
-        <div class="card" style="width: 18rem;" th:each="noticiaLista : ${noticiaLista}">           
-            <!--     <img th:src="@{/imagen/__${noticiaLista.id}___}" class="card-img-top" alt="archivo" >   -->
+        <div class="card" id="cardTrue"  th:each="noticiaLista : ${noticiaLista}" th:if="${noticiaLista.alta != 1 }">           
+            <img th:src="@{/imagen/imagen2/__${noticiaLista.id}__}" class="card-img-top" alt="archivo" >
             <h5 class="card-title" th:text="${noticiaLista.titulo}"></h5>
             <p class="card-text" th:text="${noticiaLista.cuerpo}"></p>
             <div class="card-body">
                 <a th:href="@{/noticia/modificar/__${noticiaLista.id}__}" sec:authorize="hasRole('ADMIN')" class="card-link">Modificar</a>
-                <a href="#" sec:authorize="hasRole('ADMIN')"  class="card-link">Alta</a>
-                <a href="#" sec:authorize="hasRole('ADMIN')"  class="card-link">Baja</a>
+                <a th:href="@{/noticia/alta/__${noticiaLista.id}__}"sec:authorize="hasRole('ADMIN')"  class="card-link">Alta</a>
+                <a th:href="@{/noticia/baja/__${noticiaLista.id}__}" sec:authorize="hasRole('ADMIN')"  class="card-link">Baja</a>
+                <a th:href="@{/noticia/eliminar/__${noticiaLista.id}__}" sec:authorize="hasRole('ADMIN')"  class="card-link">Eliminar</a>
             </div>
         </div> 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-</body>
+        
+       <div class="card" id="cardFalse" style="width: 18rem; background-color: red" th:each="noticiaLista : ${noticiaLista}" th:if="${noticiaLista.alta != 0 }">           
+            <img th:src="@{/imagen/imagen2/__${noticiaLista.id}__}" class="card-img-top" alt="archivo" >
+            <h5 class="card-title" th:text="${noticiaLista.titulo}"></h5>
+            <p class="card-text" th:text="${noticiaLista.cuerpo}"></p>
+            <div class="card-body">
+                <a th:href="@{/noticia/modificar/__${noticiaLista.id}__}" sec:authorize="hasRole('ADMIN')" class="card-link">Modificar</a>
+                <a th:href="@{/noticia/alta/__${noticiaLista.id}__}"sec:authorize="hasRole('ADMIN')"  class="card-link">Alta</a>
+                <a th:href="@{/noticia/baja/__${noticiaLista.id}__}" sec:authorize="hasRole('ADMIN')"  class="card-link">Baja</a>
+                <a th:href="@{/noticia/eliminar/__${noticiaLista.id}__}" sec:authorize="hasRole('ADMIN')"  class="card-link">Eliminar</a>
+            </div>
+        </div> 
+        <div th:replace = "/fragment/boots :: div"></div>
+    </body>
 </html>
