--- a/Spring/NoticiaC/src/main/resources/templates/noticia_form.html
+++ b/Spring/NoticiaC/src/main/resources/templates/noticia_form.html
@@ -1,9 +1,4 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaft.or/extras/spring-security">
     <head th:replace="/fragment/head :: head"> </head>
     <body>
@@ -38,6 +33,10 @@ and open the template in the editor.
                         <label for="formFile" class="form-label">Imagen para la noticia</label>
                         <input class="form-control" name="foto" type="file" id="formFile">
                     </div>
+                    <select class="form-control" name="alta">
+                        <option th:value="1" >alta</option>
+                        <option th:value="0" >baja</option>
+                    </select>                 
                     <div th:if="${error != null}" class="alert alert-danger" role="alert">
                         <p class="MensajeError" th:text="${error}"></p>
                     </div>
@@ -49,7 +48,6 @@ and open the template in the editor.
                 </form>
             </div>
         </div>      
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <div th:replace = "/fragment/boots :: div"></div>
     </body>
 </html>
