--- a/Spring/NoticiaC/src/main/resources/templates/noticia_modificar.html
+++ b/Spring/NoticiaC/src/main/resources/templates/noticia_modificar.html
@@ -42,6 +42,10 @@ and open the template in the editor.
                         <label for="formFile" class="form-label">Imagen para la noticia</label>
                         <input class="form-control" name="foto" type="file" id="formFile">
                     </div>
+                    <select class="form-control" name="alta">
+                        <option th:value="1" >alta</option>
+                        <option th:value="0" >baja</option>
+                    </select>             
                     <div th:if="${error != null}" class="alert alert-danger" role="alert">
                         <p class="MensajeError" th:text="${error}"></p>
                     </div>
@@ -53,7 +57,6 @@ and open the template in the editor.
                 </form>
             </div>
         </div>      
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <div th:replace = "/fragment/boots :: div"></div>
     </body>
 </html>
