--- a/Spring/NoticiaC/src/main/resources/templates/perfilModificar.html
+++ b/Spring/NoticiaC/src/main/resources/templates/perfilModificar.html
@@ -10,50 +10,49 @@
                 </div>
                 <div class="card" style="width: 48rem;" >           
                     <!--<form class="formulario" th:action="@{/perfilM/__${usuario.id}__}" method="POST" enctype="multipart/form-data">-->
-                        <form class="formulario" th:action="@{/perfilM/__${session.usuariosession.id}__}" method="POST" enctype="multipart/form-data">
+                    <form class="formulario" th:action="@{/perfilM/__${session.usuariosession.id}__}" method="POST" enctype="multipart/form-data">
 
-                            <div class="card-body">
-                                <h1 class="card-title">Modificar Perfil</h1>
-                                <br>
-                                <div class="form-row">
-                                   <!-- <input hidden th:value="${usuario.id}" name="id">-->
-                                   <input hidden th:value="${session.usuariosession.id}" name="id">
+                        <div class="card-body">
+                            <h1 class="card-title">Modificar Perfil</h1>
+                            <br>
+                            <div class="form-row">
+                                <!-- <input hidden th:value="${usuario.id}" name="id">-->
+                                <input hidden th:value="${session.usuariosession.id}" name="id">
 
-                                    <div class="form-group col-md-6">
-                                        <label for="inputEmail4">Nombre</label>
-                                        <input type="text"  name="nombre" class="form-control" id="inputNombre"  th:value="${nombre}">
-                                    </div>
-                                    <div class="form-group col-md-6">
-                                        <label for="inputEmail4">Email</label>
-                                        <input type="email"  name="email"  class="form-control" id="inputEmail4"  th:value="${email}">
-                                    </div>
-                                    <div class="form-group col-md-6">
-                                        <label for="inputPassword4">Contraseña</label>
-                                        <input type="password"  name="pass"  class="form-control" id="inputPassword4" th:value="${pass}">
-                                    </div>
-                                    <div class="form-group col-md-6">
-                                        <label for="inputPassword4">Repetir Contraseña</label>
-                                        <input type="password"  name="pass2"  class="form-control" id="inputRepetirPassword4" th:value="${pass2}">
-                                    </div>
-                                    <div class="mb-3">
-                                        <label for="formFile" class="form-label">Imagen de perfil</label>
-                                        <input class="form-control" name="foto" type="file" id="formFile" th:value="${archivo}">
-                                    </div> 
+                                <div class="form-group col-md-6">
+                                    <label for="inputEmail4">Nombre</label>
+                                    <input type="text"  name="nombre" class="form-control" id="inputNombre"  th:value="${nombre}">
                                 </div>
+                                <div class="form-group col-md-6">
+                                    <label for="inputEmail4">Email</label>
+                                    <input type="email"  name="email"  class="form-control" id="inputEmail4"  th:value="${email}">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="inputPassword4">Contraseña</label>
+                                    <input type="password"  name="pass"  class="form-control" id="inputPassword4" th:value="${pass}">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="inputPassword4">Repetir Contraseña</label>
+                                    <input type="password"  name="pass2"  class="form-control" id="inputRepetirPassword4" th:value="${pass2}">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="formFile" class="form-label">Imagen de perfil</label>
+                                    <input class="form-control" name="foto" type="file" id="formFile" th:value="${archivo}">
+                                </div> 
                             </div>
-                            <div th:if="${error != null}" class="alert alert-danger" role="alert">
-                                <p class="MensajeError" th:text="${error}"></p>
-                            </div>
-                            <div th:if="${exito != null}" class="alert alert-success" role="alert">
-                                <p class="MensajeExito" th:text="${exito}"></p>
-                                <!--  <a class="btn" th:href="@{/login}" >Listar noticias</a> -->
-                            </div>
-                            <button type="submit" class="btn btn-secondary btn-lg btn-block" id="botonEnviar">Registrar</button>
-                        </form>
+                        </div>
+                        <div th:if="${error != null}" class="alert alert-danger" role="alert">
+                            <p class="MensajeError" th:text="${error}"></p>
+                        </div>
+                        <div th:if="${exito != null}" class="alert alert-success" role="alert">
+                            <p class="MensajeExito" th:text="${exito}"></p>
+                            <!--  <a class="btn" th:href="@{/login}" >Listar noticias</a> -->
+                        </div>
+                        <button type="submit" class="btn btn-secondary btn-lg btn-block" id="botonEnviar">Registrar</button>
+                    </form>
                 </div>
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+        <div th:replace = "/fragment/boots :: div"></div>
     </body>
 </html>
