--- a/Spring/NoticiaC/src/main/resources/templates/error.html
+++ b/Spring/NoticiaC/src/main/resources/templates/error.html
@@ -4,7 +4,7 @@
     <body>
         <header th:replace="/fragment/navbar :: header"> </header>
         <div>Error</div>
-        <a class="navbar-brand" th:text="'Error ' + ${codigo}">NOTICIA</a>
+        <a class="navbar-brand" th:text="'Error ' + ${codigo}">MG ARGENTINA</a>
         <p class="mensaje" th:text="${mensaje}"></p>  
         <section class="text-center container">
             <div class="row mt-3">
