--- a/Spring/NoticiaC/src/main/resources/templates/noticia_form.html
+++ b/Spring/NoticiaC/src/main/resources/templates/noticia_form.html
@@ -30,7 +30,7 @@
                         </div>
                     </div>                   
                     <br> <div class="mb-3">
-                        <label for="formFile" class="form-label">Imagen para la noticia</label>
+                        <label for="formFile" class="form-label">Imagen </label>
                         <input class="form-control" name="foto" type="file" id="formFile">
                     </div>
                     <select class="form-control" name="alta">
@@ -42,7 +42,7 @@
                     </div>
                     <div th:if="${exito != null}" class="alert alert-success" role="alert">
                         <p class="MensajeExito" th:text="${exito}"></p>
-                        <a class="btn" th:href="@{/noticia/listar}" >Listar noticias</a>
+                        <a class="btn" th:href="@{/noticia/listar}" >Listar </a>
                     </div>
                     <button class="btn btn-secondary btn-lg btn-block" type="submit" id="botonEnviar">Enviar</button>
                 </form>
